# syncer

./: .gitignore  README.md  pyproject.toml
src/abs_syncer/: conf.py  exceptions.py
src/abs_syncer/domain/: authenticator.py  connection.py  connection_api.py  data_column.py  erp_reader.py  erp_system.py  purchase_data.py  supply_system.py  supply_writer.py
src/abs_syncer/services/: sync.py
